# webres6

./: .gitignore  ACKNOWLEDGMENTS.md  CLAUDE.md  README.md  REUSE.toml  create-virtualenvs.sh  docker-compose.dev.yml  docker-compose.host.yml  docker-compose.yml  otel-collector-config.yaml  webres6
.claude/agents/: helm-checker.md  regression-tester.md  security-reviewer.md
.claude/skills/: regression-tester.md  release.md
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: api-tests.yml  deploy-test.yml  docker-build.yml  helm-lint.yml  reuse-lint.yml
.pipeline/: config.yml
api/: AGENTS.md  Dockerfile  README.md  TESTING.md  create-venv.sh  docker-entrypoint  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_tests.sh  test_webres6_api.py  test_webres6_storage.py  unbound.v6only.conf  webres6-api-metadata.xml  webres6-api.py  webres6_api.py  webres6_crawler.py  webres6_dnsprobe.py  webres6_extension.py  webres6_nat64.py  webres6_scoreboard.py  webres6_selenium_extension.py  webres6_stackoverflow.py  webres6_storage.py  webres6_whois.py
api/serverconfig/: MESSAGE  webres6_extension.debug_output.py  webres6_extension.googledns.py  webres6_extension.loadcrx.py  webres6_selenium_extension.googledns.py  webres6_selenium_extension.loadcrx.py
cli/: create-venv.sh  pyproject.toml  requirements.txt  webres6-cli.py  webres6_cli.py
dnsprobe/: Dockerfile  create-venv.sh  dnsprobe.py  docker-entrypoint  pyproject.toml  requirements.txt  unbound.v6only.conf
doc/: architecture.graffle  s3-localstack.md
doc/acme/: 05-load-acme-module.sh  README.md  docker-compose.https.yml  webres6-https.conf.template
helm/: Chart.yaml  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  api-deployment.yaml  api-hpa.yaml  api-podmonitor.yaml  api-reports-pvc-backup-job.yaml  api-scorebaord-backups-job.yaml  api-scoreboard-pvc-backup-job.yaml  api-serverconfig.yaml  api-service.yaml  dnsprobe-deployment.yaml  dnsprobe-service.yaml  ingress.yaml  mcp-deployment.yaml  mcp-hpa.yaml  mcp-service.yaml  viewer-deployment.yaml  viewer-hpa.yaml  viewer-service.yaml  viewer-well-known.yaml  webres6-admin-secret.yaml
helm/templates/tests/: api-test-1-connection.yaml  api-test-2-healthz.yaml  api-test-connection.yaml
mcp/: Dockerfile  create-venv.sh  pyproject.toml  webres6-mcp
mcp/webres6_mcp/: __init__.py  config.py  server.py
mcp/webres6_mcp/prompts/: __init__.py
mcp/webres6_mcp/resources/: __init__.py  reports.py
mcp/webres6_mcp/tools/: __init__.py  check_website.py  get_report.py  reports.py  resolve_dns.py  scoreboard.py
viewer/: 404.html  50x.html  Dockerfile  disabled.html  nginx.conf.docker-compose  nginx.conf.template  unicorn.css  viewer.css  viewer.html  viewer.js
