# SPDX-FileCopyrightText: 2025 SAP SE and IPv6 Web Resource Checker contributors
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webres6-cli"
version = "1.4.0"
description = "IPv6 Web Resource Checker CLI"
readme = "../README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "urllib3==2.6.3",
    "urllib3-future==2.19.913",
]

[project.scripts]
webres6 = "webres6_cli:main"

[tool.hatch.build.targets.wheel]
sources = ["."]
include = ["webres6_cli.py"]
