# SPDX-FileCopyrightText: 2026 SAP SE and IPv6 Web Resource Checker contributors
#
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webres6-mcp"
version = "1.8.0"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]==1.28.1",
    "httpx==0.28.1",
    "hishel[httpx,async]==1.3.0",
]

[project.scripts]
webres6-mcp = "webres6_mcp:main"
